--- a/actions/instrument/deploy/action.yaml
+++ b/actions/instrument/deploy/action.yaml
@@ -110,10 +110,10 @@ runs:
           cat "$workflow_file" | yq '.jobs | keys[]' | while read -r job_name; do
             cat "$workflow_file" | yq ".jobs.$job_name.steps" | grep -qvF null || continue
             if [ -z "$(cat "$workflow_file" | yq ".jobs.$job_name.steps[] | select(.uses == \"${{ inputs.action_repository }}/actions/instrument/job@*\") | .uses")" ]; then continue; fi
-            case "${{ inputs.job_level_instrumentation_secret_redaction_strategy }}" in
-              case none) yq -i "del(.jobs.$job_name.steps[0].with.secrets_to_redact)" "$workflow_file";;
-              case list) yq -i ".jobs.$job_name.steps[0].with.secrets_to_redact = '$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE '\${{[[:blank:]]*secrets\.[a-zA-Z0-9_.-]+[[:blank:]]*}}' || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)'" "$workflow_file";; # TODO check index of step for this and above and below
-              case  all) yq -i ".jobs.$job_name.steps[0].with.secrets_to_redact = '$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)'" "$workflow_file";;
+            case "${{ inputs.job_level_instrumentation_secret_redaction_strategy }}" in # TODO figure out index
+              case none) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[0].with.secrets_to_redact')" = null ] || yq -i "del(.jobs.$job_name.steps[0].with.secrets_to_redact)" "$workflow_file";;
+              case list) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[0].with.secrets_to_redact') = "$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE '\${{[[:blank:]]*secrets\.[a-zA-Z0-9_.-]+[[:blank:]]*}}' || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)" ] || yq -i ".jobs.$job_name.steps[0].with.secrets_to_redact = '$(cat "$workflow_file" | { echo JHt7IGdpdGh1Yi50b2tlbiB9fQo= | base64 -d; grep -oE '\${{[[:blank:]]*secrets\.[a-zA-Z0-9_.-]+[[:blank:]]*}}' || true; } | sort -u | jq --raw-input --slurp 'split("\n") | .[0:-1]' -c)'" "$workflow_file";;
+              case  all) [ "$(cat "$workflow_file" | yq '.jobs.$job_name.steps[0].with.secrets_to_redact')" = "$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)" ] || yq -i ".jobs.$job_name.steps[0].with.secrets_to_redact = '$(echo JHt7IHRvSlNPTihzZWNyZXRzKSB9fQo= | base64 -d)'" "$workflow_file";;
               case    *) echo '::error ::Illegal strategy "${{ inputs.job_level_instrumentation_secret_redaction_strategy }}"!' && exit 1;;
             esac
           done
